toggle favorite, fix text align,css

--- a/css/dynamic-header.css
+++ b/css/dynamic-header.css
@@ -5,7 +5,7 @@
     box-shadow: 0px 0.1px 20px 0px #b3b3b3;
     z-index: 10;
     padding-left: 115px;
-    padding-right: 20px;
+    padding-right: 120px;
     background-color: white;
 }
 
